divided style.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/* Riyadh ullah-------------------------------------------------------------------------------- */
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -70,3 +72,16 @@ input:focus, select:focus {
 .login-button:hover {
     background-color: #0056b3;
 }
+
+
+/* Fahad-------------------------------------------------------------------------------- */
+
+
+
+
+
+
+
+
+
+/* Siam-------------------------------------------------------------------------------- */
