--- a/css/login_style.css
+++ b/css/login_style.css
@@ -27,6 +27,12 @@ h1 {
 }
 
 .form-group {
+    width: 94.5%;
+    margin-bottom: 15px;
+    text-align: left;
+}
+
+.form-group1 {
     margin-bottom: 15px;
     text-align: left;
 }
