--- a/css/appointment_style.css
+++ b/css/appointment_style.css
@@ -129,28 +129,25 @@ button:hover {
     background-color: #e74c3c;
 }
 
-/* Container */
-.container {
+ /* Container */
+ .container {
     display: flex;
     width: 100%;
     height: 100%;
 }
 
-/* Sidebar styles */
 .sidebar {
     width: 250px;
-    background-color: #3498db;
+    background-color: #007BFF;
     color: white;
     padding: 20px 10px;
-    box-shadow: 2px 0 10px rgba(0, 0, 0, 0.2);
-    height: 100%;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+    height: auto;
 }
 
 .sidebar h2 {
     text-align: center;
     margin-bottom: 20px;
-    font-size: 22px;
-    font-weight: bold;
 }
 
 .sidebar ul {
@@ -166,17 +163,25 @@ button:hover {
     display: block;
     text-decoration: none;
     color: white;
-    padding: 12px 20px;
-    border-radius: 8px;
-    font-size: 16px;
+    padding: 10px 15px;
+    border-radius: 5px;
     transition: background-color 0.3s ease, box-shadow 0.3s ease;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
 
 .sidebar ul li a:hover {
-    background-color: #2980b9;
-    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
+    background-color: #0056b3;
 }
+
+/* Change the color of the Appointments link */
+/* 
+.sidebar ul li:nth-child(2) a {
+    color: #16ece1; /* Change this to the desired color 
+
+.sidebar ul li:nth-child(2) a:hover {
+    color: #159d4e; /* Change this to the hover color 
+}
+*/
+
 
 /* Main content styles */
 .main-content {
@@ -189,22 +194,29 @@ button:hover {
 }
 
 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 2px solid #ddd;
-    padding-bottom: 10px;
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+     border-bottom: 2px solid #ddd;
+     padding-bottom: 10px;
+     margin-top: 20px;
 }
 
-header h1 {
-    margin: 0;
-    font-size: 28px;
-    color: #2c3e50;
-    font-weight: bold;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
-    letter-spacing: 1px;
+ header h1 {
+     margin: 0;
+     font-size: 28px;
+     color: #2c3e50;
+     font-weight: bold;
+     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+     letter-spacing: 1px;
 }
 
+header p {
+     font-size: 18px;
+     color: #007BFF;
+     margin: 0;
+     font-style: italic;
+}
 .logout-button {
     background-color: #e67e22;
     color: white;
@@ -223,17 +235,8 @@ header h1 {
     box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
     transform: translateY(-2px);
 }
-
 /* Content */
 .content {
-    margin-top: 20px;
-}
-/* Change the color of the Appointments link */
-.sidebar ul li:nth-child(2) a {
-    color: #16ece1; /* Change this to the desired color */
-}
-
-.sidebar ul li:nth-child(2) a:hover {
-    color: #159d4e; /* Change this to the hover color */
+    margin-top: 10px;
 }
 
