--- a/css/homePage.css
+++ b/css/homePage.css
@@ -40,7 +40,7 @@ body {
 }
 
 .header .btn:hover {
-    background-color: #0056b3;
+    background-color: #f25e50;
     box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
 }
 
@@ -66,7 +66,7 @@ body {
     display: inline-block;
     text-decoration: none;
     color: white;
-    background-color: #28a745;
+    background-color: #FF6347;
     padding: 12px 20px;
     border-radius: 5px;
     font-size: 16px;
@@ -75,7 +75,7 @@ body {
 }
 
 .hero .hero-btn:hover {
-    background-color: #218838;
+    background-color: #f25e50;
     box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
 }
 
